[gd_scene load_steps=2 format=3 uid="uid://21jc8njqn5go"]

[ext_resource type="Script" path="res://components/draggable/script.gd" id="1_38m1k"]

[node name="DraggableComponent" type="Button"]
self_modulate = Color(1, 1, 1, 0)
offset_right = 250.0
offset_bottom = 250.0
script = ExtResource("1_38m1k")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
